--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
           </div>
         </div>
       </div>
-      <embed src="/files/Thomas_Slegers_cv.pdf" frameborder="0" width="100%" height="1200px">
+      <img src="img/cv.png" class="img-fluid" alt="Responsive image">
     </div>
     <p>
       <br>
