--- a/index.html
+++ b/index.html
@@ -150,7 +150,6 @@
                     in business management waar mijn specialisatie lag op logistiek management.
                     Tijdens mijn huidige en voorgaande studie blijkt ook meermaals bewezen dat ik
                     goed kan samenwerken en coördineren met teamleden en elke uitdaging aanga.
-                  </p>
                   <p><span class="title-s">Studies: </span></p>
                   <p class="lead">
                     Professionele Bachelor: Toegepaste Informatica, <div class="small">UC Leuven-Limburg sep 2020 — Heden</div>
@@ -491,7 +490,7 @@
           </div>
         </div>
       </div>
-      <img src="img/cv.png" class="img-fluid" alt="Responsive image">
+      <embed src="/files/Thomas_Slegers_cv.pdf" frameborder="0" width="100%" height="1200px">
     </div>
     <p>
       <br>
