--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
           </div>
         </div>
       </div>
-      <embed src="/files/Thomas_Slegers_cv.pdf" frameborder="0" width="100%" height="1200px">
+      <embed src="https://github.com/Thomsleg/Thomas-Slegers/blob/main/Thomas_Slegers_cv.pdf" frameborder="0" width="100%" height="1200px">
     </div>
     <p>
       <br>
