--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
           </div>
         </div>
       </div>
-      <embed src="https://github.com/Thomsleg/Thomas-Slegers/blob/c03243ad02931f86614e32bb740958d4d6825f20/Thomas_Slegers_cv.pdf" frameborder="0" width="100%" height="1200px">
+      <embed src="Thomas_Slegers_cv.pdf" frameborder="0" width="100%" height="1200px">
     </div>
     <p>
       <br>
@@ -582,6 +582,14 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
+            <div class="socials">
+              <ul>
+                <li><a href="https://www.linkedin.com/in/slegers-thomas/"><span class="ico-circle"><i class="ion-social-linkedin"></i></span></a></li>
+                <li><a href="https://www.facebook.com/thomas.slegers.5"><span class="ico-circle"><i class="ion-social-facebook"></i></span></a></li>
+                <li><a href="Thomas_Slegers_cv.pdf"><span class="ico-circle"><i class="ion-document"></i></span></a></li>
+                <li><a href="SWOT.pdf"><span class="ico-circle"><i class="ion-ios-photos"></i></span></a></li>
+              </ul>
+            </div>
             <div class="copyright-box">
               <p class="copyright">&copy; Copyright <strong>Thomas Slegers</strong>. All Rights Reserved</p>
               <div class="credits">
