--- a/index.html
+++ b/index.html
@@ -490,7 +490,8 @@
           </div>
         </div>
       </div>
-      <embed src="Thomas_Slegers_cv.pdf" frameborder="0" width="100%" height="1200px">
+      <img src="img/cv.png" class="img-fluid" alt="Responsive image">
+      <!--<embed src="Thomas_Slegers_cv.pdf" frameborder="0" width="100%" height="1200px">-->
     </div>
     <p>
       <br>
