Update 3de jaar

--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
           <li class="nav-item">
             <a class="nav-link js-scroll" href="#cv">cv</a>
           </li>
-          <li class="nav-item">
+          <!--<li class="nav-item">
             <a class="nav-link js-scroll" href="#SWOT-Analyse">SWOT-Analyse</a>
-          </li>
-          <li class="nav-item">
+          </li>-->
+          <!--<li class="nav-item">
             <a class="nav-link js-scroll" href="#contact">Contact</a>
-          </li>
+          </li>-->
         </ul>
       </div>
     </div>
@@ -499,6 +499,7 @@
   </section>
 
   <!--/ Section Testimonials Star /-->
+  <!--
   <div class="testimonials paralax-mf bg-image" style="background-image: url(img/overlay-bg.jpg)">
     <div class="overlay-mf"></div>
     <div class="container">
@@ -524,10 +525,10 @@
         </div>
       </div>
     </div>
-  </section>
+  </section>-->
 
   <!--/ Section Contact-Footer Star /-->
-  <section class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(img/overlay-bg.jpg)">
+  <!--<section class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(img/overlay-bg.jpg)">
     <div class="overlay-mf"></div>
     <div class="container">
       <div class="row">
@@ -579,6 +580,7 @@
         </div>
       </div>
     </div>
+  -->
     <footer>
       <div class="container">
         <div class="row">
