--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
                   </div>
                   <p class="lead">
                   <p><span class="title-s">Profiel: </span></p>
-                    Ik ben een 2e-jaars Hogeschoolstudent aan het UCLL-Leuven die bezig is aan
+                    Ik ben een 3e-jaars hogeschoolstudent aan het UCLL-Leuven die bezig is aan
                     een tweede opleiding: toegepaste informatica. Verder heb ik mij ook verdiept
-                    in business management waar mijn specialisatie lag op logistiek management.
+                    in bedrijfsmanagement waar mijn specialisatie lag op logistiek management.
                     Tijdens mijn huidige en voorgaande studie blijkt ook meermaals bewezen dat ik
                     goed kan samenwerken en coördineren met teamleden en elke uitdaging aanga.
                   <p><span class="title-s">Studies: </span></p>
