--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                   </div>
                   <p class="lead">
                   <p><span class="title-s">Profiel: </span></p>
-                    Ik ben een 3e-jaars hogeschoolstudent aan het UCLL-Leuven die bezig is aan
+                    Ik ben een 3de jaars hogeschoolstudent aan het UCLL-Leuven die bezig is aan
                     een tweede opleiding: toegepaste informatica. Verder heb ik mij ook verdiept
                     in bedrijfsmanagement waar mijn specialisatie lag op logistiek management.
                     Tijdens mijn huidige en voorgaande studie blijkt ook meermaals bewezen dat ik
